[gd_scene load_steps=4 format=2]

[ext_resource path="res://Map/CapturePoint/CapturePoint.gd" type="Script" id=1]
[ext_resource path="res://assets/white-circle-emoji-clipart-md.webp" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

[node name="CapturePoint" type="Area2D"]
collision_layer = 128
collision_mask = 7
script = ExtResource( 1 )
enemy_color = Color( 0.815686, 0.129412, 0.129412, 1 )
ally_color = Color( 0.180392, 0.482353, 0.74902, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="TextureProgress" type="TextureProgress" parent="CollisionShape2D"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -10.0
margin_top = -10.0
margin_right = 790.0
margin_bottom = 790.0
rect_scale = Vector2( 0.025, 0.025 )
mouse_filter = 2
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 2 )
fill_mode = 4

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
